fix: edit popup title overlap

--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 360px) {
     .popup__title {
-        font-size: 22px;
+        font-size: 20px;
     }
 }
